--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-component-example-project",
-  "version": "0.1.3",
-  "description": "A minimal boilerplate for building a react component for npm, including a demo page.",
+  "name": "minimalist-react-grid",
+  "version": "0.0.1",
+  "description": "A minimalist responsive grid component for React",
   "main": "lib/index.js",
   "scripts": {
     "lib": "babel src/lib -d lib",
@@ -9,7 +9,7 @@
     "docs": "webpack-dev-server",
     "docs:prod": "webpack -p"
   },
-  "keywords": [],
+  "keywords": ["react", "grid"],
   "license": "MIT",
   "peerDependencies": {
     "react": "^15.3.0 || ^16.2.0",
@@ -22,19 +22,19 @@
     "@babel/preset-react": "^7.0.0-beta.37",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.8",
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "styled-components": "^3.2.3",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.0"
   },
-  "author": "Markus Englund <markus.s.englund@gmail.com>",
+  "author": "Julien Sanmartin <sanmartinjulien@gmail.com>",
   "homepage": "https://github.com/yogaboll/react-npm-component-starter",
   "repository": {
     "type": "git",
-    "url": "git@github.com:yogaboll/react-npm-component-starter.git"
+    "url": "git@github.com:juliensanmartin/minimalist-react-grid.git"
   }
 }
